--- a/src/sass/_global-styles.scss
+++ b/src/sass/_global-styles.scss
@@ -11,16 +11,8 @@ body {
   margin: 0 auto;
 }
 
-header {
-  // background: red; 
-}
-
-main {
-  // background: purple;
-}
-
-footer {
-  // background: blue;
+ul { 
+  padding: 0;
 }
 
 li {
